--- a/Research_on_water_status_Chapters/Airside_Waterflow_figure_grouped_by_temperature.tex
+++ b/Research_on_water_status_Chapters/Airside_Waterflow_figure_grouped_by_temperature.tex
@@ -1,35 +1,38 @@
 \begin{figure}[ht]
-	\label{figurec4}
+	
 	\centering
+	\subfloat[\label{fig:airside_waterflow_120A_ratio_group}]{
+		\begin{tikzpicture}[scale=0.6]
+		
+			\begin{axis}[
+					title={Airside waterflow at 120A load current},
+					xlabel={Airflow Ratio},
+					ylabel={Airside Water Flow/$g \cdot s^{-1}$},
+					xmin=1.8, xmax=3,
+					ymin=2.5, ymax=7,
+					ytick distance = 0.5,
+					xtick distance = 0.2,
+					legend pos=north west,
+					ymajorgrids=true,
+					grid style=dashed,
+					legend style={font=\small}
+				]
+				\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{55:55}] {Research_on_water_status_data/airside_waterflow_120A_in_temperature.csv};
+				\addlegendentry{Temperature 55}
+				\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{60:60}] {Research_on_water_status_data/airside_waterflow_120A_in_temperature.csv};
+				\addlegendentry{Temperature 60}
+				\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{65:65}] {Research_on_water_status_data/airside_waterflow_120A_in_temperature.csv};
+				\addlegendentry{Temperature 65}
+				\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{70:70}] {Research_on_water_status_data/airside_waterflow_120A_in_temperature.csv};
+				\addlegendentry{temperature 70}
+				\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{73:73}] {Research_on_water_status_data/airside_waterflow_120A_in_temperature.csv};
+				\addlegendentry{Temperature 73}
+			\end{axis}
+		\end{tikzpicture}
+	}
+	
 	\begin{tikzpicture}[scale=0.6]
-		\label{fig:airside_waterflow_120A_ratio}
-		\begin{axis}[
-				title={Airside waterflow at 120A load current},
-				xlabel={Airflow Ratio},
-				ylabel={Airside Water Flow/$g \cdot s^{-1}$},
-				xmin=1.8, xmax=3,
-				ymin=2.5, ymax=7,
-				ytick distance = 0.5,
-				xtick distance = 0.2,
-				legend pos=north west,
-				ymajorgrids=true,
-				grid style=dashed,
-				legend style={font=\small}
-			]
-			\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{55:55}] {Research_on_water_status_data/airside_waterflow_120A_in_temperature.csv};
-			\addlegendentry{Temperature 55}
-			\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{60:60}] {Research_on_water_status_data/airside_waterflow_120A_in_temperature.csv};
-			\addlegendentry{Temperature 60}
-			\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{65:65}] {Research_on_water_status_data/airside_waterflow_120A_in_temperature.csv};
-			\addlegendentry{Temperature 65}
-			\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{70:70}] {Research_on_water_status_data/airside_waterflow_120A_in_temperature.csv};
-			\addlegendentry{temperature 70}
-			\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{73:73}] {Research_on_water_status_data/airside_waterflow_120A_in_temperature.csv};
-			\addlegendentry{Temperature 73}
-		\end{axis}
-	\end{tikzpicture}
-	\begin{tikzpicture}[scale=0.6]
-		\label{fig:airside_waterflow_210A_ratio}
+		
 		\begin{axis}[
 				title={Airside waterflow at 210A load current},
 				xlabel={Airflow Ratio},
@@ -54,9 +57,10 @@
 			\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{73:73}] {Research_on_water_status_data/airside_waterflow_210A_in_temperature.csv};
 			\addlegendentry{Temperature 73}
 		\end{axis}
+		\label{fig:airside_waterflow_210A_ratio}
 	\end{tikzpicture}
 	\begin{tikzpicture}[scale=0.6]
-		\label{fig:airside_waterflow_300A_ratio}
+		
 		\begin{axis}[
 				title={Airside waterflow at 300A load current},
 				xlabel={Airflow Ratio},
@@ -81,6 +85,8 @@
 			\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{73:73}] {Research_on_water_status_data/airside_waterflow_300A_in_temperature.csv};
 			\addlegendentry{Temperature 73}
 		\end{axis}
+		\label{fig:airside_waterflow_300A_ratio}
 	\end{tikzpicture}
 	\caption{Comparison of water flow rate flowing out of the air side under different air metering ratios (a:120A; b:210A; c:300A; vertical as water flow; horizontal as air flow rate; starting point from top to bottom is ordered by temperature: 63/65/68/70/73℃)}
+	\label{figure6}
 \end{figure}
