--- a/Research_on_water_status_Chapters/ref.bib
+++ b/Research_on_water_status_Chapters/ref.bib
@@ -447,3 +447,22 @@
 	year = {2023},
 	pages = {100237},
 }
+
+
+@article{verhaertWaterManagementAlkaline2011,
+  title = {Water Management in an Alkaline Fuel Cell},
+  author = {Verhaert, Ivan and Verhelst, Sebastian and Janssen, Griet and Mulder, Grietus and De Paepe, Michel},
+  date = {2011-08-01},
+  journaltitle = {International Journal of Hydrogen Energy},
+  series = {International {{Conference}} on {{Hydrogen Production}} ({{ICH2P}})-2010},
+  volume = {36},
+  number = {17},
+  pages = {11011--11024},
+  issn = {0360-3199},
+  doi = {10.1016/j.ijhydene.2011.05.172},
+  url = {https://www.sciencedirect.com/science/article/pii/S0360319911014236},
+  urldate = {2024-03-12},
+  abstract = {Alkaline fuel cells are low temperature fuel cells for which stationary applications, like cogeneration in buildings, are a promising market. To guarantee a long life, water and thermal management has to be controlled in a careful way. To understand the water, alkali and thermal flows, a model for an alkaline fuel cell module is developed using a control volume approach. Special attention is given to the physical flow of hydrogen, water and air in the system and the diffusion laws are used to gain insight in the water management. The model is validated on the prediction of the electrical performance and thermal behaviour. The positive impact of temperature on fuel cell performance is shown. New in this model is the inclusion of the water management, for which an extra validation is performed. The model shows that a minimum temperature has to be reached to maintain the electrolyte concentration. Increasing temperature for better performance without reducing the electrolyte concentration is possible with humidified hot air.},
+  keywords = {Alkaline fuel cell,Cogeneration,Heat management,Model,Performance,Water management},
+  file = {C:\Users\Yiyu\Zotero\storage\B7A2KBBA\Verhaert et al_2011_Water management in an alkaline fuel cell.pdf}
+}
