--- a/Research_on_water_status_Chapters/Chapter1_Introduction.tex
+++ b/Research_on_water_status_Chapters/Chapter1_Introduction.tex
@@ -44,11 +44,12 @@ The pressure drop between the inlet and outlet of the fuel cell is mainly caused
 \par
 \begin{figure}[h]
     \centering
-    \label{fig:figure1}
+    
     \includegraphics{Research_pictures/Fig1.jpg}
     % \includesvg{Research_pictures/1.svg}
     % \includegraphics{Research_pictures/1.svg}
     \caption[short]{The change of cathode and anode voltage drop with time during flooding process}
+    \label{fig:figure1}
 \end{figure}
 The detection methods based on electrochemical signals mainly include electrochemical impedance spectroscopy, current interruption method, and cyclic voltammetry, etc. Among them, electrochemical impedance spectroscopy is the most common hydration state detection method because it can distinguish different electrochemical processes and can be tested online \cite{yousfisteinerDiagnosisPolymerElectrolyte2011,chenOperationCharacteristicsCarbon2015}. The figure \ref{fig:figure1} shows the difference in fuel cell impedance spectra under different air humidity conditions. As the air humidity decreases, the value of the high-frequency impedance segment (i.e., the intercept of the impedance spectrum with the real axis) gradually increases, the impedance spectrum moves to the right, and the radius of the low-frequency arc segment also gradually increases \cite{hussainiVisualizationQuantificationCathode2009}, which can be used as an indicator of the hydration state of the fuel cell.
 % 基于电化学信号的检测方法主要有电化学阻抗谱、电流中断法、循环伏安法等。其中，电化学阻抗谱是最常见的水化状态检测方法，因为它可以区分不同的电化学过程，并且可以在线测试\ 引用{yousfisteinerDiagnosisPolymerElectrolyte2011，chenOperationCharacteristicsCarbon2015}。图\ref{fig:figure1}显示了不同空气湿度条件下燃料电池阻抗谱的差异。随着空气湿度的降低，高频阻抗段的值（即阻抗谱与实轴的截距）逐渐增大，阻抗谱向右移动，低频圆弧段的半径增大 也逐渐增加\cite{hussainiVisualizationQuantificationCathode2009}，可以作为燃料电池水合状态的指标。
@@ -56,7 +57,7 @@ The detection methods based on electrochemical signals mainly include electroche
 When analyzing the relationship between impedance spectra and the internal hydration state of fuel cells, equivalent circuit models are often introduced. The model generally includes resistors, capacitors, inductors, and Warburg elements\cite{tangRecentProgressUse2020}. The model is capable of quantitatively analyzing the electrochemical process.  The key to this method is the establishment of equivalent models and parameter identification. Fouquet et al.[25] extended the standard capacitor to a constant phase element, proving that the three resistance values of the model are related to the relative humidity of the air supply. Zhang et al.[26] used a neural network method to complete parameter identification, and the predicted Nyquist plot almost completely coincides with the measured value, and by directly predicting the parameters of the equivalent circuit, they detailed the degree of influence of different processes on fuel cell performance. BMW proposed a method for online monitoring of impedance, which requires collecting five frequency points, divided into three groups to fit the Randles circuit, obtaining ohmic impedance, polarization resistance and double layer capacitance\cite{fouquetModelBasedPEM2006}.
 % 在分析阻抗谱与燃料电池内部水合状态之间的关系时，常常引入等效电路模型。该模型通常包括电阻器、电容器、电感器和 Warburg 元件\cite{tangRecentProgressUse2020}。该模型能够定量分析电化学过程。该方法的关键是等效模型的建立和参数辨识。Fouquet 等人 [25] 将标准电容器扩展为恒相位元件，证明模型的三个电阻值与送风相对湿度有关。张等 [26] 他们利用神经网络方法完成参数辨识，预测的奈奎斯特图与测量值几乎完全吻合，并通过直接预测等效电路的参数，详细说明了不同工艺对燃料电池性能的影响程度。BMW 提出了一种在线监测阻抗的方法，需要采集 5 个频点，分成 3 组来拟合 Randles 电路，得到欧姆阻抗、极化电阻和双层电容\cite{fouquetModelBasedPEM2006}。
 \par
-However, the above methods are mostly suitable for single cells or low-power fuel cells. Applying them to high-power fuel cell doesn't gain any noticeable improvements\cite{tangRecentProgressUse2020,jiangMicrobialFuelCell2018,dotelliCombiningElectricalPressure2016,millerReviewPolymerElectrolyte2011,nagulapatiMachineLearningBased2023}, since the assembly structure, flow field structure, and operating conditions of high-power fuel cell stacks are significantly different from those of single cells and low-power stacks. 
+However, the above methods are mostly suitable for single cells or low-power fuel cells. Applying them to high-power fuel cell doesn't gain any noticeable improvements\cite{tangRecentProgressUse2020,jiangMicrobialFuelCell2018,dotelliCombiningElectricalPressure2016,millerReviewPolymerElectrolyte2011,nagulapatiMachineLearningBased2023}, since the assembly structure, flow field structure, and operating conditions of high-power fuel cell stacks are significantly different from those of single cells and low-power stacks \cite{verhaertWaterManagementAlkaline2011}. 
 % TODO 这里需要添加一些参考文献
 Therefore, the detection of the hydration state of high-power fuel cell systems is still in a relatively blank stage.
 % 然而，上述方法大多适用于单电池或小功率燃料电池。将它们应用于高功率燃料电池并没有获得任何明显的改进\cite{tangRecentProgressUse2020, JiangMicrobialFuelCell2018,dotelliCombiningElectricalPressure2016,millerReviewPolymerElectrolyte2011,nagulapatiMachineLearningBased2023}，因为高功率燃料电池堆的装配结构、流场结构和运行条件显着 与单电池和低功率电堆不同。因此，大功率燃料电池系统水合状态的检测还处于比较空白阶段。
